--- a/src/app/entregas/uski/component/uskiComponent/uskiComponent.html
+++ b/src/app/entregas/uski/component/uskiComponent/uskiComponent.html
@@ -1,2 +1,9 @@
-<h2>Entrega Uski</h2>
+<div class="uski-wrapper">
+  <div class="uski-page">
+    <app-header></app-header>
 
+    <router-outlet></router-outlet>
+    
+    <app-footer></app-footer>
+  </div>
+</div>
